--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
@@ -112,6 +112,12 @@
           <show id="bcpg:entityTplEnabled" force="false" />
           <show id="bcpg:entityTplIsDefault" force="false" />
           <show id="bcpg:entityTplScript" force="false" />
+					<show id="bcpg:regulatoryCountries" />
+					<show id="bcpg:regulatoryUsageRef" />
+					<show id="bcpg:regulatoryMode" />
+					<show id="bcpg:regulatoryRecipeId" />
+					<show id="bcpg:regulatoryResult" />
+					<show id="bcpg:regulatoryValidationDate" />
         </field-visibility>
         <appearance>
           <set id="template" appearance="bordered-panel" label-id="becpg.forms.set.template.label" />
@@ -313,6 +319,28 @@
 		  	 <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl"></control>
 		  </field>
           
+					<set appearance="bordered-panel" id="regulatory" label-id="becpg.forms.set.regulatory.label" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<field id="bcpg:regulatoryCountries" set="regulatory">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="bcpg:regulatoryUsageRef" set="regulatory">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="bcpg:regulatoryMode" set="regulatory" />
+					<field id="bcpg:regulatoryRecipeId" read-only="true"
+						set="regulatory" />
+					<field id="bcpg:regulatoryResult" read-only="true"
+						set="regulatory" />
+					<field id="bcpg:regulatoryValidationDate" mandatory="false"
+						read-only="false" set="regulatory">
+						<control
+							template="/org/alfresco/components/form/controls/date.ftl">
+							<control-param name="showTime">false</control-param>
+						</control>
+					</field>
+
           <set appearance="bordered-panel" id="dimension" label-id="becpg.forms.set.pack.size.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="pack:length" mandatory="false" read-only="false" set="dimension">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
@@ -966,6 +994,9 @@
           <show force="false" id="bcpg:productSpecifications"/>
           <show force="false" id="cm:taggable"/>
           <show force="false" id="cm:categories"/>
+					<show force ="true" id="bcpg:regulatoryMode" />
+					<show force="true" id="bcpg:regulatoryCountries" />
+					<show force="true" id="bcpg:regulatoryUsageRef" />
         </field-visibility>
         <appearance>
           <set appearance="bordered-panel" id="mainInfo" label-id="becpg.forms.set.designation.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
@@ -1071,6 +1102,20 @@
 							</control-param>
             </control>
           </field>
+					
+					<set appearance="bordered-panel" id="regulatory"
+						label-id="becpg.forms.set.regulatory.label"
+						template="/org/alfresco/components/form/2-column-set.ftl" />
+					<field id="bcpg:regulatoryCountries" set="regulatory">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="bcpg:regulatoryUsageRef" set="regulatory">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="bcpg:regulatoryMode" set="regulatory" />
+					
           <set appearance="bordered-panel" id="categories" label-id="becpg.forms.set.category.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="cm:taggable" mandatory="false" read-only="false" set="categories">
             <control>
